--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header class="p-fix">
+        <div class="header-sec flex between-jc">
+            <img class="logo" src="./img/logo.png" alt="logo">
+            <div class="menu-hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="#">Planning</a>
+                    </li>
+                    <li>
+                        <a href="#">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="#">Features</a>
+                    </li>
+                    <li>
+                        <a href="#">About Us</a>
+                    </li>
+                    <li>
+                        <a class="button-h" href="#">Get Started</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
