first section mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,44 @@
             </div>
         </div>
     </header>
-    <main></main>
+
+    <!-- Main -->
+    <main>
+        <section class="space container flex column">
+            <div class="container-1card flex column">
+                <h3>Get a demo application</h3>
+                <p class="text-demo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
+                <div class="app-store">
+                    <a href="#"><i class="fa-brands fa-apple"></i> App store</a>
+                </div>
+                <img src="./img/phone.png" alt="">
+            </div>
+            
+            <div class="container-1card flex column">
+                <i class="fa-solid fa-file-code icon"></i>
+                <h3>Clean Code</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
+            </div>
+
+            <div class="container-1card flex column">
+                <i class="fa-solid fa-compass-drafting icon"></i>
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
+            </div>
+
+            <div class="container-1card flex column">
+                <i class="fa-solid fa-laptop-code icon"></i>
+                <h3>Developement</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
+            </div>
+
+            <div class="container-1card flex column">
+                <i class="fa-solid fa-bullhorn icon"></i>
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
