second section(strategic) respondive

--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita aspernatur impedit repellendus quod nihil, aliquam error consequuntur laboriosam.</p>
             </div>
         </section>
+        
+        <section class="strategic">
+            <div class="container ">
+                <div class="planning">
+                    <img class="width-img" src="./img/planning1.png" alt="planning1-img">
+                    <h1 class="title-strategic">Strategic Planning</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magni sequi saepe ullam sunt deleniti eligendi autem doloremque, odit accusamus, vitae impedit maxime repellendus explicabo non facere dignissimos quibusdam veniam!
+                    </p>
+                </div>
+                <div class="develop">
+                    <img class="width-img" src="./img/planning2.png" alt="planning2-img">
+                    <h1>App Developement</h1>
+                    <p class="title-develop">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque alias obcaecati placeat corporis, totam magnam ut amet unde maiores ex atque voluptatem.
+                    </p>
+                    <a class="arrow-under" href="#">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
