third section (testimonials) responsive

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
     <!-- Main -->
     <main>
+
+        <!-- demo application -->
         <section class="space container flex wrap">
             <div class="container-1card flex column">
                 <div>
@@ -80,8 +82,9 @@
             </div>
         </section>
         
+        <!-- strategic -->
         <section class="strategic">
-            <div class="container ">
+            <div class="container cont-strat">
                 <div class="planning">
                     <img class="width-img" src="./img/planning1.png" alt="planning1-img">
                     <h1 class="title-strategic">Strategic Planning</h1>
@@ -98,6 +101,65 @@
                     <a class="arrow-under" href="#">
                         <i class="fa-solid fa-arrow-down"></i>
                     </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- testimonials -->
+        <section class="container">
+            <div class="testimonials">
+                <h2>Testimonials</h2>
+                <h1>We are committed expert partners</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quod obcaecati illum perspiciatis, aspernatur veniam. Consequuntur harum, expedita qui iste aliquid natus provident, nulla architecto ut explicabo laboriosam. Itaque, voluptate.
+                </p>
+            </div>
+
+            <div class="cont-card">
+                <div>
+                    <img src="./img/testimonial1.jpg" alt="testimonial1">
+                </div>
+                <div>
+                    <div class="text-1card">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, ullam vero. Numquam dolorum facere, distinctio ut doloribus corrupti fugit mollitia aliquid!
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>NAT REYNOLDS</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cont-card">
+                <div>
+                    <img src="./img/testimonial2.jpg" alt="testimonial1">
+                </div>
+                <div>
+                    <div class="text-1card">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, ullam vero. Numquam dolorum facere, distinctio ut doloribus corrupti fugit mollitia aliquid!
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>CELIA ALMEDA</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cont-card space-bottom">
+                <div>
+                    <img src="./img/testimonial3.jpg" alt="testimonial1">
+                </div>
+                <div>
+                    <div class="text-1card">
+                        <p>
+                            <i class="fa-solid fa-quote-left"></i>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, ullam vero. Numquam dolorum facere, distinctio ut doloribus corrupti fugit mollitia aliquid!
+                            <i class="fa-solid fa-quote-right"></i>
+                        </p>
+                        <h3>BOB ROBERTS</h3>
+                    </div>
                 </div>
             </div>
         </section>
