--- a/index.html
+++ b/index.html
@@ -163,6 +163,96 @@
                 </div>
             </div>
         </section>
+
+        <!-- benefits -->
+        <section class="cont-benefits">
+            <div class="container benefits ult-cardB">
+                <div class="title-benefits">
+                    <h1>Benefits of working with us</h1>
+                </div>
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">01</div>
+                        <h2>High Quality</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">02</div>
+                        <h2>Creative Team</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">03</div>
+                        <h2>Amazing Results</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">04</div>
+                        <h2>Best Pricing</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">05</div>
+                        <h2>Innovations</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards-benefits">
+                    <div class="cardB">
+                        <div class="number">06</div>
+                        <h2>24/7 Support</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde perferendis dolorem illo dolore incidunt nulla fuga corrupti possimus sapiente. Obcaecati exercitationem atque impedit corporis, officia quo voluptate. Voluptatibus, animi inventore.
+                        </p>
+                        <div class="button-ben">
+                            <span>more</span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+        <!-- about us -->
     </main>
     <footer></footer>
 </body>
