about us 5, get started 6 responsive

--- a/index.html
+++ b/index.html
@@ -253,6 +253,53 @@
         </section>
 
         <!-- about us -->
+        <section class="container ab-us-cont">
+            <div class="ab-us-text">
+                <h1>About Us</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident iure blanditiis nesciunt dolor, perspiciatis nisi adipisci unde veritatis consectetur, sunt,
+                     voluptatibus quam mollitia repellendus aspernatur ratione quod velit porro ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum libero accusamus praesentium ab beatae quos consectetur id, 
+                     aspernatur atque quae nam molestiae dignissimos architecto vitae quisquam qui illum temporibus sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint atque iusto placeat, est dignissimos a fuga rerum veritatis, 
+                     dicta explicabo saepe aut laborum eos consectetur minima, non tempora! Minus, porro!
+                </p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae a nulla debitis enim sapiente eaque repellat nostrum aspernatur fuga doloremque. Quo quis maxime odio fugit odit molestiae ducimus aut vitae.
+                </p>
+            </div>
+            <div class="ab-us-img">
+                <div class="quote-l">
+                    <img src="./img/about.jpg" alt="img-ab-us">
+                    <i class="fa-solid fa-quote-left icon-ab-us"></i>
+                </div>
+                <h2>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt omnis fugiat obcaecati aut odit ut.
+                </h2>
+                <div class="button-ab-us">
+                    <i class="fa-brands fa-linkedin"></i>
+                    Find me on linkedin
+                </div>
+            </div>
+        </section>
+
+        <!-- get started -->
+        <section class="started">
+            <div class="container">
+                <div class="text-started">
+                    <div class="little-started">GET STARTED</div>
+                    <h2>Simple, Transparent Pricing</h2>
+                    <h1>It's Free!</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit voluptates porro dolorem. Deserunt at a odit deleniti unde repellendus laudantium quo suscipit.
+                    </p>
+                    <div>
+                        <a class="button-started" href="#">Get Started</a>
+                    </div>
+                    <div class="copyright-start">
+                        Copyright 2021 Boolean · Classe XX · <a href="#">Privacy policy</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
