--- a/index.html
+++ b/index.html
@@ -301,6 +301,16 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+    <footer class="back-footer">
+        <div class="container">
+            <p class="text1-foot">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellendus rem autem, quasi explicabo commodi blanditiis inventore dolor architecto impedit aperiam doloremque eaque quo corrupti quia tenetur vero dolores et.
+            </p>
+            <p class="text2-foot">
+                <a href="#">Lorem ipsum</a> dolor sit amet consectetur adipisicing elit. <a href="#">Dolore, molestias?</a>  
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
